--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ header {
 	color: whitesmoke;
 	text-shadow: 1px 1px 4px rgb(27, 26, 26);
 	border-radius: 10px;
-	padding: 1.5rem;
+	padding: 1rem;
 	margin: 1rem;
 	font-size: 1.5rem;
 }
@@ -85,7 +85,6 @@ header {
 footer {
 	display: flex;
 	flex-direction: column;
-	align-items: left;
 	background-color: #74ebd5;
 	background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
 	margin: 1rem;
@@ -93,11 +92,9 @@ footer {
 	border-radius: 5px;
 	color: rgb(29, 43, 113);
 	font-size: 20px;
-	font-weight: 600;
 }
 
-footer a,
-#updated {
+footer a {
 	color: #ff3e55;
 }
 
@@ -107,4 +104,12 @@ footer a,
 	align-items: center;
 	margin: 0.5rem;
 	max-width: 35rem;
+}
+
+.contact_info p {
+	margin-bottom: 0.5rem;
+}
+
+.contact_info p:nth-child(2) {
+	color: rgb(114, 55, 216);
 }
