--- a/css/styles.css
+++ b/css/styles.css
@@ -43,13 +43,17 @@ header {
 	font-size: 1.5rem;
 }
 
+header h1 {
+	margin: 1.5rem;
+}
+
 .profile_photo {
 	border-radius: 10px;
 	position: absolute;
-	left: 71%;
-	top: 6%;
-	height: 420px;
-	max-width: 250px;
+	left: 68%;
+	top: 4%;
+	height: 400px;
+	max-width: 280px;
 	filter: drop-shadow(4px 4px 5px rgb(27, 26, 26));
 }
 
@@ -88,7 +92,7 @@ footer {
 	background-color: #74ebd5;
 	background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
 	margin: 1rem;
-	padding: 1.5rem;
+	padding: 0.6rem;
 	border-radius: 5px;
 	color: rgb(29, 43, 113);
 	font-size: 20px;
