--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,9 @@ header h1 {
 	position: absolute;
 	left: 68%;
 	top: 4%;
+}
+
+.profile_photo img {
 	height: 400px;
 	max-width: 280px;
 	filter: drop-shadow(4px 4px 5px rgb(27, 26, 26));
@@ -116,4 +119,30 @@ footer a {
 
 .contact_info p:nth-child(2) {
 	color: rgb(114, 55, 216);
+}
+
+@media screen and (max-width: 950px) {
+	.profile_photo {
+		position: initial;
+		margin-top: 1rem;
+		padding: 2rem;
+	}
+
+	.profile_photo img {
+		max-width: 100%;
+		max-height: 100%;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.profile_photo img {
+		max-width: 100%;
+		margin: 0 auto;
+	}
+}
+
+@media screen and (max-width: 330px) {
+	header h1 {
+		font-size: 2rem;
+	}
 }
