--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,16 @@ footer a {
 		max-width: 100%;
 		max-height: 100%;
 	}
+
+	.contact_info {
+		max-width: inherit;
+	}
+}
+
+@media screen and (max-width: 550px) {
+	.contact_info p {
+		text-align: center;
+	}
 }
 
 @media screen and (max-width: 480px) {
