--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ img {
 	max-width: 100%;
 }
 
-body {
+.profile-body {
 	margin: 0;
 	max-width: 992px;
 	margin: 0 auto;
@@ -25,7 +25,7 @@ body {
 	);
 }
 
-header {
+.profile-header {
 	background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
 	background-image: linear-gradient(
 		65.9deg,
@@ -43,7 +43,7 @@ header {
 	font-size: 1.5rem;
 }
 
-header h1 {
+.profile-header h1 {
 	margin: 1.5rem;
 }
 
@@ -97,7 +97,7 @@ header h1 {
 	color: rgb(82, 170, 228);
 }
 
-footer {
+.profile-footer {
 	display: flex;
 	flex-direction: column;
 	background-color: #74ebd5;
@@ -109,7 +109,7 @@ footer {
 	font-size: 20px;
 }
 
-footer a {
+.profile-footer a {
 	color: #ff3e55;
 }
 
@@ -161,12 +161,160 @@ footer a {
 }
 
 @media screen and (max-width: 330px) {
-	header h1 {
+	.profile-header h1 {
 		font-size: 2rem;
 	}
 
 	.profile_photo img {
 		height: auto;
 		margin: 0 auto;
+	}
+}
+
+/* ******************** DESIGN PRINCIPLES STYLES ************************* */
+
+/* *************** DESIGN PRINCIPLES PALLETE***************** */
+
+:root {
+	--first-color: hsl(224, 19%, 27%);
+	--second-color: hsl(256, 9%, 32%);
+	--third-color: hsl(240, 100%, 97%);
+	--fourth-color: hsl(205, 58%, 52%);
+	--fifth-color: hsl(12, 83%, 62%);
+	--sixth-color: hsl(39, 100%, 63%);
+
+	--body-font: "Roboto Slab", serif;
+	/* offset-x | offset-y | blur-radius | spread-radius | color */
+	--shadow: 1px 1px 4px rgb(27, 26, 26);
+}
+
+.design-body {
+	font-family: var(--body-font);
+	/* max-width: 1000px; */
+	margin: 0 auto;
+}
+.design-header {
+	background-color: var(--first-color);
+	color: var(--third-color);
+	font-family: var(--body-font);
+	font-size: 1.5rem;
+	/* margin: 1rem; */
+	text-align: center;
+	text-shadow: var(--shadow);
+	padding: 1rem;
+}
+
+.design-header h2 {
+	color: var(--fifth-color);
+	font-size: 1.5rem;
+	margin-bottom: 1rem;
+}
+
+.design-container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 2rem;
+	margin: 3rem auto;
+	padding: 2rem;
+}
+
+.design-card {
+	border: 1px solid #ccc;
+	border-radius: 15px;
+	overflow: hidden;
+	box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.design-title {
+	background-color: var(--fourth-color);
+	padding: 1rem;
+	color: var(--third-color);
+	text-align: center;
+
+	text-shadow: var(--shadow);
+	font-size: 1.3rem;
+}
+
+.design-description {
+	text-align: center;
+	padding: 1rem;
+}
+
+.design-description p {
+	color: var(--second-color);
+	font-size: 1.5rem;
+	font-weight: 600;
+	margin-bottom: 1rem;
+}
+
+.design-description a {
+	color: var(--fifth-color);
+}
+
+.design-description a:hover {
+	color: var(--fourth-color);
+}
+
+.design-text {
+	color: var(--first-color);
+	background-color: rgb(228, 227, 227);
+	height: 100%;
+	padding: 1rem;
+	text-align: justify;
+}
+
+.design-footer {
+	background-color: var(--first-color);
+	color: var(--third-color);
+	font-size: 1.3rem;
+	padding: 2rem;
+	text-align: center;
+}
+
+.design_info a {
+	color: var(--fourth-color);
+}
+
+.design_info a:hover {
+	color: var(--fifth-color);
+}
+
+.design_info p:nth-child(1) {
+	margin-bottom: 1rem;
+}
+
+.design_info p:nth-child(2) {
+	color: var(--sixth-color);
+}
+
+@media screen and (max-width: 1055px) {
+	.design-description a {
+		font-size: small;
+	}
+}
+
+@media screen and (max-width: 945px) {
+	.design-container {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+	.design-description a {
+		font-size: large;
+	}
+}
+
+@media screen and (max-width: 786px) {
+	.design-container {
+		display: block;
+	}
+
+	.design-card {
+		margin-bottom: 2.5rem;
+	}
+}
+
+@media screen and (max-width: 320px) {
+	.design_info a {
+		font-size: 17.5px;
 	}
 }
