--- a/lesson2/css/styles.css
+++ b/lesson2/css/styles.css
@@ -129,3 +129,32 @@ h3 {
 .weather-plan-info p:nth-child(2) {
 	color: var(--sixth-color);
 }
+
+/* ***************COLOR SCHEME ****************/
+
+.weather-plan-list {
+	padding: 2rem;
+}
+
+.weather-plan-list h2,
+.weather-plan-color h2 {
+	font-size: 2rem;
+	padding: 2rem;
+}
+.weather-plan-list li {
+	color: var(--text-color);
+	padding: 0.5rem;
+}
+
+.weather-plan-list a {
+	color: var(--fifth-color);
+	text-decoration: none;
+}
+
+.weather-plan-list a:hover {
+	color: var(--fourth-color);
+}
+
+.weather-plan-img {
+	padding: 0 2rem;
+}
