--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -70,7 +70,6 @@ nav {
 	/* padding: 0.5rem; */
 	font-family: var(--font-family-secondary);
 	margin: 0 auto;
-	max-width: 960px;
 	/* min-width: 380px; */
 	border: 1px solid red;
 }
@@ -119,4 +118,29 @@ nav {
 
 .responsive a.ham::before {
 	content: url("/weather/images/close-icon-1.png");
+}
+
+/* ********* MAIN CONTENT ********/
+
+.container {
+	display: block;
+}
+
+.cards {
+	border: 1px solid #ccc;
+	margin: 1rem;
+	box-shadow: var(--box-shadow);
+}
+
+.cards h3 {
+	padding: 1.5rem;
+}
+
+/* ********** FOOTER ********** */
+
+.contact-info {
+	background-color: var(--background-color-2);
+	color: var(--h1-color);
+	text-align: center;
+	padding: 1rem;
 }
