--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -1,5 +1,22 @@
 /* 35em is also 560px when basefont is 16px */
 @media only screen and (min-width: 35rem) {
+	:root {
+		--background-color-1: hsl(213, 28%, 41%);
+		--background-color-2: hsl(211, 19%, 55%);
+		--background-color-3: hsl(212, 19%, 85%);
+		--h1-color: #eee;
+		--h2-color: hsl(177, 85%, 39%);
+		--text-color: hsl(212, 19%, 85%);
+		--links-color: hsl(222, 81%, 61%);
+		--link2-color: hsl(12, 83%, 62%);
+		--font-family-primary: "Noto Sans", sans-serif;
+		--font-family-secondary: "Source Serif Pro", serif;
+		--dark-shadow: 1px 1px 4px hsl(0, 2%, 10%);
+		--box-shadow: 0 4px 8px 0 hsla(0, 0%, 0%, 0.2);
+	}
+
+	/* ****** HEADER ****** */
+
 	.navigation {
 		display: flex;
 	}
@@ -35,4 +52,62 @@
 	.contact-info {
 		font-size: 1.2rem;
 	}
+
+	/* ****** END HEADER ****** */
+
+	/* ******HERO SECTION ****** */
+
+	.hero-section {
+		position: relative;
+	}
+
+	.hero-image {
+		opacity: 0.3;
+	}
+	.hero-summary {
+		position: absolute;
+		top: 57%;
+		/* left: 20px; */
+		padding: 1rem;
+		transform: translate(10%, -50%);
+	}
+
+	.hero-summary h3 {
+		padding-left: 0rem;
+	}
+
+	/* ******END HERO SECTION ****** */
+
+	/* ****** FORECAST ****** */
+	.forecast {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.forecast-flex {
+		display: flex;
+		flex-flow: row wrap;
+		border: 1px solid var(--background-color-1);
+	}
+
+	.forecast-box {
+		flex: 1 1 auto;
+		border-left: 1px solid var(--background-color-1);
+	}
+
+	.forecast-box div:nth-child(1) {
+		border-left: none;
+	}
+
+	.forecast-box p:nth-child(1) {
+		background-color: var(--background-color-2);
+		margin: 0;
+		padding: 1rem;
+		border-bottom: 1px solid;
+	}
+
+	/* .forecast-box p:nth-child(2) {
+		padding: 1rem;
+	} */
 } /*end medium */
