--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -42,6 +42,16 @@ img {
 	max-width: 100%;
 }
 
+/* ********** DISPLAY MESSAGE ********** */
+
+.display-message {
+	background-color: var(--link2-color);
+	padding: 1rem;
+	margin: 0;
+	color: var(--h1-color);
+	font-size: 1.5rem;
+	text-align: center;
+}
 /* ********** HEADER ********** */
 
 .preston-header img {
