--- a/lesson4/css/styles.css
+++ b/lesson4/css/styles.css
@@ -4,23 +4,27 @@ main {
 	align-items: center;
 }
 
-/* Blur CSS */
-/* Create loading effect */
-
-img[data-src] {
-	filter: blur(0.2em);
-}
-
-img {
-	filter: blur(0);
+picture {
 	transition: filter 0.5s;
-	padding: 1rem;
+	padding: 0.8rem;
 	border: 1px solid #ccc;
 	box-shadow: 2px 2px #eee;
 	transition: 0.2s;
 }
 
-img:hover {
+/* Blur CSS */
+/* Create loading effect */
+
+img {
+	max-width: 100%;
+	filter: blur(0);
+}
+
+img[data-src] {
+	filter: blur(0.2em);
+}
+
+picture:hover {
 	box-shadow: 0 0 2px 1px rgba(21, 160, 206, 0.5);
 	opacity: 0.8;
 	transform: scale(0.9);
