--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -7,14 +7,6 @@
 	margin: 1rem auto;
 	border: thin #c0c0c0 solid;
 	overflow: hidden;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-	transition: 0.3s;
-}
-
-.gallery-photo:hover {
-	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-	transform: scale(0.95);
-	opacity: 0.8;
 }
 
 .gallery-photo img {
@@ -32,4 +24,5 @@
 	padding: 0.7rem;
 	margin: -4px;
 	text-align: center;
+	font-weight: 600;
 }
