--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -157,4 +157,16 @@
 		}
 		/* ****** END MAP ****** */
 	}
+
+	/* ********************* PHOTO GALLERY-7 ******************  */
+	.gallery-photo {
+		margin: 0;
+	}
+
+	.gallery-container {
+		display: grid;
+		grid-template-columns: repeat(2, 250px);
+		gap: 1rem;
+		justify-content: center;
+	}
 } /*end medium */
