--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -318,3 +318,52 @@ h4 {
 }
 
 /* ********* END MAIN GALLERY-7 ********** */
+
+/* ********** FROM STYLES ************ */
+form fieldset {
+	margin: 2rem;
+	border: solid 1px #445ba9;
+	border-radius: 10px;
+	padding: 0.5rem 2%;
+}
+
+form legend {
+	color: var(--link2-color);
+	margin: 0 1rem;
+	padding: 0 0.5rem;
+	text-align: left;
+}
+
+form label.top {
+	display: block;
+	padding-top: 1rem;
+	color: var(--links-color);
+	font-size: 0.8rem;
+	text-align: left;
+}
+
+form label.top input,
+form label.top select {
+	-webkit-appearance: none;
+	display: block;
+	font-size: 1rem;
+	border: solid 1px #999;
+	border-radius: 4px;
+	padding: 0.75rem;
+	color: #555;
+	width: 100%;
+	max-width: 20rem;
+	background-color: rgba(0, 0, 0, 0.1);
+}
+
+form label.range input {
+	-webkit-appearance: initial;
+	display: block;
+	font-size: 1rem;
+	border: solid 1px #999;
+	padding: 0;
+	margin: 0;
+	/* background-color: #445ba9; */
+}
+
+/* ********** END FROM STYLES ************ */
