--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -334,7 +334,9 @@ form legend {
 	text-align: left;
 }
 
-form label.top {
+form label.top,
+form label.range,
+div {
 	display: block;
 	padding-top: 1rem;
 	color: var(--links-color);
@@ -343,7 +345,8 @@ form label.top {
 }
 
 form label.top input,
-form label.top select {
+form label.top select,
+form label.top textarea {
 	-webkit-appearance: none;
 	display: block;
 	font-size: 1rem;
@@ -357,13 +360,37 @@ form label.top select {
 }
 
 form label.range input {
-	-webkit-appearance: initial;
 	display: block;
 	font-size: 1rem;
 	border: solid 1px #999;
-	padding: 0;
-	margin: 0;
-	/* background-color: #445ba9; */
+	margin-top: 0.75rem;
+	/* padding: 0.75rem; */
+}
+
+form label.danger {
+	display: block;
+	padding: 0.75rem 0;
+	color: #555;
+	text-align: left;
+}
+
+form input.submitBtn {
+	border: none;
+	background-color: #9c2c13;
+	color: white;
+	border-radius: 1rem;
+	padding: 0.75rem 1.5rem;
+	margin: 0 0 2rem 2%;
+	width: 96%;
+	max-width: 20rem;
+}
+
+form label.top input:required {
+	border-left: var(--link2-color) solid 6px;
+}
+
+form label.top input:required:valid {
+	border-left: var(--h2-color) solid 6px;
 }
 
 /* ********** END FROM STYLES ************ */
