--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -376,7 +376,7 @@ form label.danger {
 
 form input.submitBtn {
 	border: none;
-	background-color: #9c2c13;
+	background-color: var(--h2-color);
 	color: white;
 	border-radius: 1rem;
 	padding: 0.75rem 1.5rem;
