--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -322,7 +322,7 @@ h4 {
 /* ********** FROM STYLES ************ */
 form fieldset {
 	margin: 2rem;
-	border: solid 1px #445ba9;
+	border: solid 1px var(--links-color);
 	border-radius: 10px;
 	padding: 0.5rem 2%;
 }
@@ -356,7 +356,7 @@ form label.top textarea {
 	color: #555;
 	width: 100%;
 	max-width: 20rem;
-	background-color: rgba(0, 0, 0, 0.1);
+	background-color: var(--h1-color);
 }
 
 form label.range input {
@@ -391,6 +391,13 @@ form label.top input:required {
 
 form label.top input:required:valid {
 	border-left: var(--h2-color) solid 6px;
+}
+
+form label.top input:focus,
+form label.top textarea:focus {
+	background: rgba(0, 0, 0, 0.05);
+	outline: none;
+	box-shadow: inset 0 -2px 0 var(--h2-color);
 }
 
 /* ********** END FROM STYLES ************ */
