--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -32,7 +32,7 @@
 
 	form label.top,
 	form label.range,
-	div {
+	.danger-title {
 		font-size: 1.2rem;
 	}
 
@@ -40,4 +40,34 @@
 		padding: 0.4rem 0;
 	}
 	/* ****** END FORM STYLES ***** */
+
+	/* ********** TOWN STYLES ************ */
+	.town {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		justify-content: center;
+		margin-top: 3rem;
+	}
+
+	.town-card {
+		flex-direction: column;
+		margin: 0.8rem;
+		padding: 0;
+		gap: 0;
+	}
+
+	.town-card:nth-child(odd) {
+		flex-direction: column;
+	}
+
+	.town-info {
+		font-size: 1rem;
+		padding: 1rem;
+	}
+
+	.town-image img {
+		height: auto;
+	}
+
+	/* ********** END TOWN STYLES ************ */
 } /*end large */
