--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -401,3 +401,25 @@ form label.top textarea:focus {
 }
 
 /* ********** END FROM STYLES ************ */
+/* ********** TOWN STYLES ************ */
+.town {
+	display: block;
+	font-family: var(--font-family-primary);
+}
+
+.town-card {
+	border: 1px solid #999;
+	margin: 1.8rem;
+	padding: 1rem;
+	/* background-image: repeating-radial-gradient(circle at 0 0, transparent 0, #fefefe 54px),
+		repeating-linear-gradient(#e1e2ff, #e1e2ff);
+	background-color: #fefefe; */
+	background: #f3e7fa;
+	background: -webkit-linear-gradient(0deg, #f3e7fa 0%, #c9ccfc 100%);
+	background: linear-gradient(0deg, #f3e7fa 0%, #c9ccfc 100%);
+}
+
+.town-info {
+	font-size: 0.75rem;
+}
+/* ********** END TOWNS STYLES ************ */
