--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -411,9 +411,7 @@ form label.top textarea:focus {
 	border: 1px solid #999;
 	margin: 1.8rem;
 	padding: 1rem;
-	/* background-image: repeating-radial-gradient(circle at 0 0, transparent 0, #fefefe 54px),
-		repeating-linear-gradient(#e1e2ff, #e1e2ff);
-	background-color: #fefefe; */
+	box-shadow: var(--box-shadow);
 	background: #f3e7fa;
 	background: -webkit-linear-gradient(0deg, #f3e7fa 0%, #c9ccfc 100%);
 	background: linear-gradient(0deg, #f3e7fa 0%, #c9ccfc 100%);
