fix: nav hover color

--- a/lesson-11/css/small.css
+++ b/lesson-11/css/small.css
@@ -115,6 +115,7 @@ nav {
 
 .navigation a {
 	color: white;
+	text-shadow: var(--dark-shadow);
 	display: block;
 	font-size: 1rem;
 	text-decoration: none;
@@ -123,8 +124,9 @@ nav {
 }
 
 .navigation a:hover {
-	color: var(--links-color);
-	background-color: var(--h2-color);
+	color: black;
+	text-shadow: none;
+	background-color: var(--background-color-3);
 }
 
 .navigation a.ham::before {
