--- a/final/css/small.css
+++ b/final/css/small.css
@@ -133,6 +133,10 @@ nav {
 	font-family: var(--font-family-text);
 }
 
+.humidity {
+	margin-top: 1.1rem;
+}
+
 .hero-image img {
 	height: 300px;
 	margin: 0 auto;
@@ -242,5 +246,15 @@ nav {
 .fa-brands {
 	font-size: 1.5rem;
 	margin-right: 1rem;
+}
+
+.social-icons a {
+	text-decoration: none;
+	color: var(--color-white);
+}
+
+.updated a {
+	text-decoration: none;
+	color: var(--color-black);
 }
 /* ------- END CONTACT INFORMATION --------*/
