--- a/final/css/medium.css
+++ b/final/css/medium.css
@@ -1,14 +1,7 @@
 /* 35em is also 560px when basefont is 16px */
-/* @media only screen and (min-width: 35rem) {
-	.weather-summary {
-		background-color: var(--background-color-6);
-		border: 1px solid var(--background-color-6);
-		text-align: center;
-		margin: 2rem;
-	}
-
+@media only screen and (min-width: 35rem) {
 	.hero-section {
 		display: grid;
 		grid-template-columns: 20% 1fr 1fr;
 	}
-} */
+}
