--- a/final/css/small.css
+++ b/final/css/small.css
@@ -120,11 +120,18 @@ nav {
 	min-width: 250px;
 	text-align: center;
 	margin: 2rem;
-	background: rgba(233, 188, 227, 0.35);
 	/* background: rgba(228, 195, 223, 0.35); */
+	/* background: rgba(233, 188, 227, 0.35);
 	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 	backdrop-filter: blur(7px);
 	-webkit-backdrop-filter: blur(7px);
+	border-radius: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.18); */
+
+	background: rgba(52, 84, 209, 0.2);
+	box-shadow: 0 4px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(7.5px);
+	-webkit-backdrop-filter: blur(7.5px);
 	border-radius: 10px;
 	border: 1px solid rgba(255, 255, 255, 0.18);
 }
@@ -137,9 +144,13 @@ nav {
 	color: var(--background-color-2);
 }
 
-.humidity {
-	margin-top: 1.1rem;
+.hero-decription {
+	text-align: center;
 }
+
+/* .humidity {
+	margin-top: 1.1rem;
+} */
 
 .hero-image img {
 	height: 300px;
