--- a/final/css/large.css
+++ b/final/css/large.css
@@ -20,12 +20,12 @@
 		max-width: 960px;
 		margin: 0 auto;
 		padding-bottom: 0;
-		margin-bottom: -0.5rem;
+		margin-bottom: -0.3rem;
 	}
 
 	.hero-image img {
 		width: 100%;
-		height: 75vh;
+		height: 100%;
 	}
 
 	.hero-info {
