--- a/final/css/small.css
+++ b/final/css/small.css
@@ -50,12 +50,9 @@ img {
 
 /* ------- NAVBAR -------- */
 nav {
-	background: var(--background-color-4);
-	/* padding: 0.5rem; */
+	background: var(--background-color-3);
 	font-family: var(--font-family-secondary);
 	margin: 0 auto;
-	/* min-width: 380px; */
-	/* border: 1px solid red; */
 }
 
 .navigation {
@@ -74,7 +71,7 @@ nav {
 }
 
 .navigation a {
-	color: var(--color-black);
+	color: var(--color-white);
 	display: block;
 	font-size: 1.25rem;
 	text-decoration: none;
