--- a/final/css/medium.css
+++ b/final/css/medium.css
@@ -7,6 +7,7 @@
 		--background-color-4: #0cce6b;
 		--background-color-5: #ff6663;
 		--background-color-6: #e0d3de;
+		--box-shadow: 0 4px 32px 0 rgba(31, 38, 135, 0.2);
 		--navigation-color: #aaa;
 		--navigation-hover-color: #d6d6d6;
 		--color-white: white;
@@ -160,4 +161,54 @@
 		display: block;
 	}
 	/* ------- END FOOTER CONTACT ------- */
+
+	/* -------- RENTALS CARDS -------- */
+
+	.scooters-specif {
+		max-width: 960px;
+		margin: 2rem auto;
+
+		box-shadow: var(--box-shadow);
+	}
+
+	.card {
+		display: grid;
+		grid-template-columns: 40% 60%;
+		margin: 0;
+		justify-content: center;
+		align-content: center;
+		box-shadow: none;
+		border: 0;
+		border-radius: 0;
+	}
+
+	.card:nth-child(even) {
+		background-color: #eee;
+	}
+
+	.scoot-img img {
+		align-self: center;
+	}
+
+	.scoot-title h1 {
+		margin: 0.8rem;
+	}
+
+	.scoot-info,
+	.scoot-info-2 {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+	}
+
+	.scoot-detail {
+		text-align: center;
+	}
+
+	.scoot-cost h3,
+	.scoot-cost p {
+		margin: 0.5rem;
+	}
+
+	/* -------- END RENTALS CARDS -------- */
 }
