--- a/final/css/small.css
+++ b/final/css/small.css
@@ -332,3 +332,89 @@ nav {
 /* ---- END RENTAL INFORMATION -----------*/
 
 /* -------- END RENTALS CARDS -------- */
+
+/* ********** FROM STYLES ************ */
+form fieldset {
+	margin: 2rem;
+	border: solid 1px var(--background-color-2);
+	border-radius: 10px;
+	padding: 0.5rem 2%;
+}
+
+form legend {
+	font-family: var(--font-family-header);
+	color: var(--background-color-5);
+	margin: 0 1rem;
+	padding: 0 0.5rem;
+	text-align: left;
+}
+
+form label.top,
+form label.range,
+.danger-title {
+	display: flex;
+	flex-direction: column;
+	padding-top: 1rem;
+	color: var(--background-color-2);
+	font-size: 0.8rem;
+	text-align: left;
+}
+
+form label.top input,
+form label.top select,
+form label.top textarea {
+	-webkit-appearance: none;
+	display: flex;
+	font-size: 1rem;
+	border: solid 1px #999;
+	border-radius: 4px;
+	padding: 0.75rem;
+	color: #555;
+	width: 100%;
+	max-width: 20rem;
+	background-color: rgb(250, 249, 249);
+}
+
+form label.range input {
+	display: flex;
+	flex-direction: column;
+	font-size: 1rem;
+	border: solid 1px #999;
+	margin-top: 0.75rem;
+	/* padding: 0.75rem; */
+}
+
+form label.danger {
+	display: flex;
+	padding: 0.75rem 0;
+	color: #555;
+	text-align: left;
+}
+
+form input.submitBtn {
+	border: none;
+	background-color: var(--background-color-5);
+	color: white;
+	border-radius: 1rem;
+	padding: 0.75rem 1.5rem;
+	margin: 0 0 2rem 5%;
+	width: 90%;
+	max-width: 20rem;
+}
+
+form label.top input:required {
+	border-left: var(--background-color-5) solid 6px;
+}
+
+form label.top input:required:valid {
+	border-left: var(--background-color-4) solid 6px;
+}
+
+form label.top input:focus,
+form label.top textarea:focus {
+	background: rgba(0, 0, 0, 0.05);
+	outline: none;
+	box-shadow: inset 0 -2px 0 var(--h2-color);
+}
+
+/* ********** END FROM STYLES ************ */
