form images srcset

--- a/final/css/medium.css
+++ b/final/css/medium.css
@@ -211,4 +211,8 @@
 	}
 
 	/* -------- END RENTALS CARDS -------- */
+
+	/* ---------- FORM IMAGES -------- */
+
+	/* ---------- END FORM IMAGES -------- */
 }
