--- a/final/css/small.css
+++ b/final/css/small.css
@@ -476,3 +476,31 @@ form label.top textarea:focus {
 }
 
 /* ********** END GALLERY TOUR STYLES ************ */
+
+/* -------- CONTACT FORM STYLES -------- */
+.contact-form h2 {
+	color: var(--background-color-2);
+	text-align: center;
+	font-size: 2rem;
+}
+
+.label-title {
+	font-size: 1rem;
+}
+
+.form-policies {
+	color: var(--background-color-5);
+	margin-left: 0.5rem;
+}
+
+.contactBtn {
+	background-color: var(--background-color-5);
+	border: 1px solid var(--background-color-5);
+	color: var(--color-white);
+	border-radius: 10px;
+	padding: 0.5rem;
+	width: 90%;
+	max-width: 20rem;
+	text-align: center;
+}
+/* -------- END CONTACT FORM STYLES -------- */
