active nav added

--- a/final/css/small.css
+++ b/final/css/small.css
@@ -36,6 +36,10 @@ img {
 	max-width: 100%;
 }
 
+.active {
+	background-color: var(--background-color-5);
+}
+
 /* ------- HEADER LOGO -------- */
 .scoots-header {
 	background-color: var(--background-color-1);
