--- a/final/css/small.css
+++ b/final/css/small.css
@@ -176,17 +176,18 @@ nav {
 	text-align: justify;
 }
 
-.hero-info button {
+.hero-info a {
 	color: var(--color-white);
 	background-color: var(--background-color-4);
 	border: 1px solid var(--background-color-4);
-	padding: 0.5rem;
+	padding: 0.5rem 1rem;
 	border-radius: 15px;
 	justify-self: center;
 	font-weight: 800;
+	text-decoration: none;
 }
 
-.hero-info button:hover {
+.hero-info a:hover {
 	background-color: var(--background-color-5);
 	border: 1px solid var(--background-color-5);
 }
@@ -215,10 +216,11 @@ nav {
 .detailBtn {
 	background-color: var(--background-color-4);
 	border: 1px solid var(--background-color-4);
-	padding: 0.5rem;
+	padding: 0.5rem 1rem;
 	color: var(--color-white);
 	border-radius: 15px;
 	font-weight: 800;
+	text-decoration: none;
 }
 
 .detailBtn:hover {
